k8s/matrix-synapse/synapse/synapse-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
  name: synapse-master
  namespace: matrix-synapse
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8008
    protocol: TCP
    targetPort: 8008
  - name: http-repl
    port: 9093
    protocol: TCP
    targetPort: 9093
  - name: metrics
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: synapse
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse-lb
  name: synapse-lb
  namespace: matrix-synapse
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: synapse-lb
  type: ClusterIP
